--- a/src/pug/includes/form.pug
+++ b/src/pug/includes/form.pug
@@ -1,26 +1,26 @@
 form(action="", method="get") 
-    p Количество пересадок
-    p 
+    p.form-title Количество пересадок
+    p.form-text
         input(type="checkbox", id="all", name="first", value="Все")
         label 
             span
             |Все
-    p 
+    p.form-text 
         input(type="checkbox", name="", value="Без пересадок")
         label 
             span
             |Без пересадок
-    p
+    p.form-text
         input(type="checkbox", name="", value="1 пересадка")
         label 
             span
             |1 пересадка
-    p
+    p.form-text
         input(type="checkbox", name="", value="2 пересадки")
         label 
             span
             |2 пересадки
-    p
+    p.form-text
         input(type="checkbox", name="", value="3 пересадки")
         label 
             span
