--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,10 +13,14 @@ html(lang="en")
                 include ../includes/form.pug
             div.price
                 header 
+                    div.header-choose
+                        span Самый дешевый
                     div.header-choose 
-                    div.header-choose 
-                    div.header-choose 
+                        span Самый быстрый
+                    div.header-choose
+                        span Оптимальный
                 main 
+                    include ../includes/ticket.pug
                 footer
                     button
                         span Показать еще 5 билетов!
