Add style for button

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -22,5 +22,5 @@ html(lang="en")
                 main 
                     include ../includes/ticket.pug
                 footer
-                    button
+                    button.footer-button
                         span Показать еще 5 билетов!
