--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -1,5 +1,9 @@
 @import '~normalize.css';
 
+form{
+    background: #FFFFFF;
+}
+
 input {
     display: none;
 }
@@ -16,7 +20,11 @@ input[type=checkbox] + label span {
 }
  input[type=checkbox]:checked + label span::after {
     border: 1px solid #2196F3;
+    background-color: #F1FCFF;
+    border: 1px solid #2196F3;
+    
 }
+
 .form-title{
     font-family: Open Sans, sans-serif;
     font-size: 12px;
