Add block ticket

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,9 +18,7 @@ html(lang="en")
                             span Самый дешевый
                         div.header-choose 
                             span Самый быстрый
-                        div.header-choose
-                            span Оптимальный
-                    main 
+                    main.price-main
                         include ../includes/ticket.pug
                     footer.price-footer
                         button.footer-button
