--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -2,8 +2,12 @@
 
 form{
     background: #FFFFFF;
+    border: 2px solid #DFE5EC;
+    
 }
-
+form:hover{
+    border: 2px solid #2196F3;
+}
 input {
     display: none;
 }
