Add margin and padding

--- a/src/pug/includes/form.pug
+++ b/src/pug/includes/form.pug
@@ -1,5 +1,6 @@
 form(action="", method="get") 
-    p.form-title Количество пересадок
+    div.form-title 
+        p Количество пересадок
     p.form-text
         input(type="checkbox", id="all", name="first", value="Все")
         label 
