--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
             div.logo
                 img(src="../../images/Logo.png", alt="Logo")
             div.container-price
-                aside
+                aside.aside-form
                     include ../includes/form.pug
                 div.price
                     header.price-header
