--- a/src/pug/includes/ticket.pug
+++ b/src/pug/includes/ticket.pug
@@ -20,4 +20,20 @@ div.ticket-main
                 span 2 пересадки
             div.ticket-stops__number
                 span khv, khv
+    div.ticket-destination
+        div.ticket-date
+            div.ticket-destination__name
+                span khv-khv
+            div.ticket-destination__number
+                span 08:00-08:00
+        div.ticket-duration
+            div.ticket-duration__name
+                span в пути
+            div.ticket-duration__number
+                span 00ч 00м
+        div.ticket-stops
+            div.ticket-stops__name
+                span 2 пересадки
+            div.ticket-stops__number
+                span khv, khv
     
