Add onclick button

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,9 +14,9 @@ html(lang="en")
                     include ../includes/form.pug
                 div.price
                     header.price-header
-                        div.header-choose
+                        div.header-choose.choose 
                             span Самый дешевый
-                        div.header-choose 
+                        div.header-choose.choose
                             span Самый быстрый
                     main.price-main
                         include ../includes/ticket.pug
