Fix button choose

--- a/src/pug/includes/ticket.pug
+++ b/src/pug/includes/ticket.pug
@@ -1,4 +1,4 @@
-div.ticket-wrapper
+div.ticket-wrapper__none.ticket-block
     div.ticket-header
         div.ticket-price
             span 13000 р
