Update block ticket

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -20,7 +20,10 @@ html(lang="en")
                             span Самый быстрый
                     main.price-main
                         include ../includes/ticket.pug
-                        
+                        include ../includes/ticket.pug
+                        include ../includes/ticket.pug
+                        include ../includes/ticket.pug
+                        include ../includes/ticket.pug                        
                     footer.price-footer
                         button.footer-button
                             span Показать еще 5 билетов!
